test/expected/explain_i+w3.out
explain int S::x : 3
        ^
9: error: scoped names can not have bit-field widths
